--- a/ministere.html
+++ b/ministere.html
@@ -436,12 +436,9 @@ padding: 15px;
         </div>
       </div>
     </div> -->
-  
-    <header>
-      <h2>Explorez nos programmes pour en savoir davantage sur notre ministère.</h2>
-    </header>
+    <h2 style="text-align: center;">Explorez nos programmes pour en savoir davantage sur notre ministère.</h2>
     <br>
-    <h3 style="padding:15px">Brigade de Prière</h3>
+    <h4 style="padding:15px;text-transform: uppercase;">Brigade de Prière</h4>
     <p style="padding:15px">
       La brigade de Prière est un programme qui se déroule au sein de notre
       centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
@@ -497,7 +494,7 @@ padding: 15px;
       </div>
     </div>
   
-    <h3 style="text-transform: uppercase;padding:15px">LE JEûNE DES JEUNES</h3>
+    <h4 style="text-transform: uppercase;padding:15px">LE JEûNE DES JEUNES</h4>
     <p style="padding:15px">
       Chaque samedi à partir de 9h, au Centre la Grâce Parle, les jeunes se
       rassemblent pour une expérience spirituelle profonde et transformante.
@@ -541,7 +538,7 @@ padding: 15px;
       </div>
       <div class="child11"></div>
     </div>
-    <h3 style="padding:15px">LE COCKTAIL DES JEUNES</h3>
+    <h4 style="padding:15px">LE COCKTAIL DES JEUNES</h4>
     <p style="padding:15px">
       Le "Cocktail des Jeunes" est un programme soigneusement planifié,
       offrant une occasion exceptionnelle aux jeunes de se former et de
@@ -591,9 +588,8 @@ padding: 15px;
 
 
   
-    <header>
-      <h2>Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</2>
-    </header>
+    <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</2>
+  
   
     <div class="child14"></div>
     <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN en un clic, cliquer sur le bouton MTN, saisissez le montant suivi de #. Pour MOOV, saisissez le montant suivi, composez *1 suivi de # en cliquant sur le bouton MOOV. </p>
@@ -604,10 +600,9 @@ padding: 15px;
 
   </div>
 
-    <header>
-      <h2> Explorez une nouvelle dimension de la louange, dévoilant des horizons insoupçonnés et inspirants.</h2>
-    </header>
-    <h3 style="padding:15px">WORSHIP MOOD</h3>
+  <h2 style="text-align: center;"> Explorez une nouvelle dimension de la louange, dévoilant des horizons insoupçonnés et inspirants.</h2>
+   
+    <h4 style="padding:15px">WORSHIP MOOD</h4>
     <p style="padding:15px">
       Chaque dimanche, après un programme de trois jours de jeûne et de
       prière, nous nous rassemblons dans l'unité et dans la foi pour rendre
@@ -653,7 +648,7 @@ padding: 15px;
  
     <div class="parent flex-one">
       <div class="child2">
-        <h3>CHAMBRE HAUTE</h3>
+        <h4>CHAMBRE HAUTE</h4>
         <p>
           Les mardis fériés prennent une signification spéciale grâce à notre
           programme unique, la "Chambre Haute". C'est un moment où nous nous
@@ -688,7 +683,7 @@ padding: 15px;
       <div class="child8"></div>
     </div>
 
-    <h3 style="text-transform: uppercase;padding:15px">FEMME DE Grâce</h3>
+    <h4 style="text-transform: uppercase;padding:15px">FEMME DE Grâce</h4>
     <p style="padding:15px">
       "Femme de Grâce" est un rassemblement spécial dédié à l'émancipation,
       à l'épanouissement et à l'élévation des femmes. Chaque réunion est une
@@ -790,10 +785,10 @@ padding: 15px;
        La Grâce<span class="text-white"> Parle</span>
      </h6>
    </a></p>
-         <p>
+         <li>
            L'emplacement du centre se trouve en face de Santé pour tous à
            Jéricho
-         </p>
+         </li>
          <div class="d-flex pt-2">
            <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
            <a
@@ -826,12 +821,13 @@ padding: 15px;
        </div>
        <div class="col-lg-3 col-md-6">
          <h5 class="text-light mb-4">Adresse</h5>
-         <p>
-           <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
-           tous
-         </p>
-         <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-         <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+        
+           <i class="fa fa-map-marker-alt me-3">Jéricho, Face santé pour
+             tous</i>
+       <br>
+         <i class="fa fa-phone-alt me-3">+229 97 96 38 96/50505011</i>
+         <br>
+         <i class="fa fa-envelope me-3">contact@lagraceparle.org</i>
        </div>
        <div class="col-lg-3 col-md-6">
          <h5 class="text-light mb-4">Liens rapides</h5>
@@ -845,7 +841,7 @@ padding: 15px;
        <form class="col-lg-3 col-md-6" id="subscribeForm">
          <div>
            <h5 class="text-light mb-4">Newsletter</h5>
-           <p>Recevrez nos dernières actualités et mises à jour.</p>
+           <li>Recevrez nos dernières actualités et mises à jour.</li>
            <div class="position-relative mx-auto" style="max-width: 800px">
              <p id="messageParagraph"></p>
         
@@ -875,17 +871,18 @@ padding: 15px;
        </div>
      </div>
    </div>
-   <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live2.webp" style="z-index: 10000;  position: fixed;bottom: 100px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
+   <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live2.webp" style="z-index: 10000;  position: fixed;bottom: 10px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
    </div>
  
 
 
    
-   <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
+   <!-- <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
      <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
- </a>
+ </a> -->
  </div>
  <!-- Footer End -->
+
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
