--- a/faq.html
+++ b/faq.html
@@ -678,7 +678,7 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
+      class="container-fluid bg-dark text-white-50 footer mt-5 fadeIn"
       data-wow-delay="0.1s"
     >
       <div class="container py-5">
@@ -688,6 +688,7 @@
               <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
                 <h6 style="font-size: 20px" class="fw-bold text-primary m-0">
                   <img
+                    alt="logo"
                     src="./img/logo.jfif"
                     width="35"
                     style="border-radius: 100%"
@@ -696,10 +697,10 @@
                 </h6>
               </a>
             </p>
-            <p>
+            <li>
               L'emplacement du centre se trouve en face de Santé pour tous à
               Jéricho
-            </p>
+            </li>
             <div class="d-flex pt-2">
               <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
               <a
@@ -732,12 +733,14 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Adresse</h5>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
-              tous
-            </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+
+            <i class="fa fa-map-marker-alt me-3"
+              >Jéricho, Face santé pour tous</i
+            >
+            <br />
+            <i class="fa fa-phone-alt me-3">+229 97 96 38 96/50505011</i>
+            <br />
+            <i class="fa fa-envelope me-3">contact@lagraceparle.org</i>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
@@ -751,17 +754,10 @@
           <form class="col-lg-3 col-md-6" id="subscribeForm">
             <div>
               <h5 class="text-light mb-4">Newsletter</h5>
-              <p>Recevrez nos dernières actualités et mises à jour.</p>
+              <li>Recevrez nos dernières actualités et mises à jour.</li>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
-                <!-- <input
-                  class="form-control bg-transparent w-100 py-3 ps-4 pe-5"
-                  type="email"
-                  id="emails"
-                  name="email"
-                  required
-                  placeholder="Votre email"
-                /> -->
+
                 <a
                   id="openModalButton"
                   href="newsletter.html"
@@ -782,12 +778,32 @@
               droits réservés.
             </div>
             <div class="col-md-6 text-center text-md-end">
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
               Designed By <a href="index.html">La Grâce Parle</a>
             </div>
           </div>
         </div>
       </div>
+      <div id="live-icon" style="display: none">
+        <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">
+          <img
+            src="./img/live2.webp"
+            style="
+              z-index: 10000;
+              position: fixed;
+              bottom: 10px;
+              left: 10;
+              border-radius: 100%;
+              cursor: pointer;
+            "
+            alt="WhatsApp"
+            width="50"
+            height="50"
+        /></a>
+      </div>
+
+      <!-- <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
+    <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
+</a> -->
     </div>
     <!-- Footer End -->
 
