--- a/philharmonie.html
+++ b/philharmonie.html
@@ -1064,10 +1064,10 @@
       La Grâce<span class="text-white"> Parle</span>
     </h6>
   </a></p>
-        <p>
+        <li>
           L'emplacement du centre se trouve en face de Santé pour tous à
           Jéricho
-        </p>
+        </li>
         <div class="d-flex pt-2">
           <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
           <a
@@ -1100,12 +1100,13 @@
       </div>
       <div class="col-lg-3 col-md-6">
         <h5 class="text-light mb-4">Adresse</h5>
-        <p>
-          <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
-          tous
-        </p>
-        <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-        <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+       
+          <i class="fa fa-map-marker-alt me-3">Jéricho, Face santé pour
+            tous</i>
+      <br>
+        <i class="fa fa-phone-alt me-3">+229 97 96 38 96/50505011</i>
+        <br>
+        <i class="fa fa-envelope me-3">contact@lagraceparle.org</i>
       </div>
       <div class="col-lg-3 col-md-6">
         <h5 class="text-light mb-4">Liens rapides</h5>
@@ -1119,7 +1120,7 @@
       <form class="col-lg-3 col-md-6" id="subscribeForm">
         <div>
           <h5 class="text-light mb-4">Newsletter</h5>
-          <p>Recevrez nos dernières actualités et mises à jour.</p>
+          <li>Recevrez nos dernières actualités et mises à jour.</li>
           <div class="position-relative mx-auto" style="max-width: 800px">
             <p id="messageParagraph"></p>
        
@@ -1149,17 +1150,18 @@
       </div>
     </div>
   </div>
-  <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live2.webp" style="z-index: 10000;  position: fixed;bottom: 100px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
+  <div id="live-icon" style="display: none;">      <a href="https://zeno.fm/radio/la-grace-parle/" target="_blank">  <img src="./img/live2.webp" style="z-index: 10000;  position: fixed;bottom: 10px;left: 10;border-radius: 100%;cursor: pointer;" alt="WhatsApp" width="50" height="50"></a>
   </div>
 
 
 
   
-  <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
+  <!-- <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
     <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
-</a>
+</a> -->
 </div>
 <!-- Footer End -->
+
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
       ><i class="bi bi-arrow-up"></i
