--- a/temoignage.html
+++ b/temoignage.html
@@ -685,10 +685,10 @@
                 </h6>
               </a>
             </p>
-            <p>
+            <li>
               L'emplacement du centre se trouve en face de Santé pour tous à
               Jéricho
-            </p>
+            </li>
             <div class="d-flex pt-2">
               <!-- <a class="btn btn-square me-1" href=""><i class="fab fa-twitter"></i></a> -->
               <a
@@ -721,12 +721,14 @@
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Adresse</h5>
-            <p>
-              <i class="fa fa-map-marker-alt me-3"></i>Jéricho, Face santé pour
-              tous
-            </p>
-            <p><i class="fa fa-phone-alt me-3"></i>+229 97 96 38 96/50505011</p>
-            <p><i class="fa fa-envelope me-3"></i>contact@lagraceparle.org</p>
+
+            <i class="fa fa-map-marker-alt me-3"
+              >Jéricho, Face santé pour tous</i
+            >
+            <br />
+            <i class="fa fa-phone-alt me-3">+229 97 96 38 96/50505011</i>
+            <br />
+            <i class="fa fa-envelope me-3">contact@lagraceparle.org</i>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5 class="text-light mb-4">Liens rapides</h5>
@@ -740,7 +742,7 @@
           <form class="col-lg-3 col-md-6" id="subscribeForm">
             <div>
               <h5 class="text-light mb-4">Newsletter</h5>
-              <p>Recevrez nos dernières actualités et mises à jour.</p>
+              <li>Recevrez nos dernières actualités et mises à jour.</li>
               <div class="position-relative mx-auto" style="max-width: 800px">
                 <p id="messageParagraph"></p>
 
@@ -776,7 +778,7 @@
             style="
               z-index: 10000;
               position: fixed;
-              bottom: 100px;
+              bottom: 10px;
               left: 10;
               border-radius: 100%;
               cursor: pointer;
@@ -787,24 +789,9 @@
         /></a>
       </div>
 
-      <a
-        href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` "
-        target="_blank"
-      >
-        <img
-          src="./img/whatsapp-icon.png"
-          style="
-            z-index: 10000;
-            position: fixed;
-            bottom: 30px;
-            left: 10;
-            border-radius: 100%;
-          "
-          alt="WhatsApp"
-          width="50"
-          height="50"
-        />
-      </a>
+      <!-- <a href="https://api.whatsapp.com/send?phone=+22953037832&text=`Bonjour, j'ai découvert ce lien sur votre site web et je souhaiterais obtenir de plus amples informations concernant la Fondation La Grâce Parle.` " target="_blank">
+    <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 30px;left: 10;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
+</a> -->
     </div>
     <!-- Footer End -->
 
