--- a/ministere.html
+++ b/ministere.html
@@ -468,10 +468,10 @@ padding: 15px;
         </h6>
         <a
           class="btn btn-outline-primary py-2 px-3"
-          href="https://www.facebook.com/Samuel.DALUM"
+          href="https://chat.whatsapp.com/HadTnOGnGROAmZpmeYLhCh"
           target="_blank"
         >
-          Suivez-nous sur Facebook
+        Intégrer notre groupe WhatsApp
           <div
             class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
           >
