--- a/index.html
+++ b/index.html
@@ -603,20 +603,19 @@ background-image: url("./img/dalum2.jpg");
     <div class="child1"></div>
     <div class="child2">
       <h3  style="font-weight: 600;">
-        Visite Émotionnelle à l'Orphelinat</h3>
+        Visite aux orphelinats</h3>
       <p>
-        Nous avons une mission profonde :
-        apporter de l'espoir, du soutien et des opportunités aux enfants qui
-        ont perdu leurs parents. Nous croyons que chaque enfant mérite un
+        Nous avons une mission profonde qui est
+        d'apporter du soutien et des opportunités aux enfants qui
+        ont perdu leurs parents. Chaque enfant mérite un
         avenir prometteur, et c'est pourquoi nous travaillons sans relâche
         pour réaliser cette vision. Nous nous engageons à visiter
         régulièrement les orphelins, à établir des liens affectueux et à leur
         offrir une éducation de qualité. Nous sommes déterminés à les préparer
         pour un avenir brillant, en les dotant des compétences et des
-        ressources nécessaires pour réussir dans la vie.Rejoignez notre cause
+        ressources nécessaires pour réussir dans la vie. Rejoignez notre cause
         en tant que bénévole, en faisant un don ou en découvrant nos
-        initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins,
-        un acte de bonté à la fois.
+        initiatives. 
       </p>
       <a class="btn btn-outline-primary py-2 px-3"  href="humanitaire.html">
      En savoir plus
@@ -630,12 +629,11 @@ background-image: url("./img/dalum2.jpg");
     <div class="child2">
       <h3  style="font-weight: 600;">Brigade de Prière</h3>
       <p>
-        La brigade de Prière est un programme qui se déroule au sein de notre
+        La brigade de Prière est un programme de prière qui se déroule au sein du
         centre, les Mardis, Vendredi, Dimanche et les Lundi en Direct sur la
         radio Maranata(103.1). C'est un programme ou les personnes de toute
-        communauté religieuse se rassemblent pour élever leur voix à Dieu pour
-        une intervention divine de notre seigneur Jésus que ce soit pour la
-        guérison, le travail, la santé et d'autres bénédictions divines. Nous
+        communauté religieuse se rassemblent pour élever leur voix pour
+        une intervention divine de notre seigneur Jésus dans les différents domaine de notre vie. Nous
         offrons un espace de prière et d'intercession pour les besoins
         spirituels et matériels de chacun. Vous pouvez nous joindre pour nos
         séances de prières visant à solliciter les bénédictions de Dieu dans
@@ -672,8 +670,7 @@ En savoir plus sur nos programmes
         organisons des concerts en direct pour partager notre musique et notre
         message de foi. Nous proposons également des ateliers de musique pour
         aider les gens à développer leurs compétences et leur passion pour la
-        musique. Enfin, nous sommes fiers de collaborer avec d'autres artistes
-        pour créer des projets musicaux uniques et inspirants. Chez nous, la
+        musique. Chez nous, la
         musique est plus qu'un simple divertissement, c'est une expérience de
         foi et de communauté.
       </p>
@@ -750,7 +747,7 @@ En savoir plus sur nos programmes
 <!-- Donate End -->
 
 
-  <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</h2>
+  <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance</h2>
   
   <div class="containers">
     <div class="boxs box1s1">
