--- a/newsletter.html
+++ b/newsletter.html
@@ -365,18 +365,19 @@
     </div>
     <!-- Page Header End -->
 
-    <h1>Initiez vos mois en prenant des vitamines spirituelles !</h1>
+    <h1 style="text-align: center">
+      Initiez vos mois en prenant des vitamines spirituelles !
+    </h1>
 
     <div id="textLong">
       <p style="text-align: justify; padding: 10px">
         Chaque premier du mois, le Ministère chrétien "La Grâce Parle" propose
-        une réflexion inspirante en s'appuyant sur un passage biblique.
+        une réflexion inspirante en s'appuyant sur un passage biblique. À la fin
+        de chaque méditation, nous vous encourageons à prendre part à une prière
+        personnelle. Accordez une attention particulière à ce moment que vous
+        partagez avec Dieu !
       </p>
-      <p style="text-align: justify; padding: 10px">
-        À la fin de chaque méditation, nous vous encourageons à prendre part à
-        une prière personnelle. Accordez une attention particulière à ce moment
-        que vous partagez avec Dieu !
-      </p>
+
       <p style="text-align: justify; padding: 10px">
         Si le temps vous manque pour lire la méditation, vous avez également la
         possibilité de l'écouter ... que ce soit dès le matin au réveil, pendant
@@ -404,29 +405,29 @@
     </div>
     <br />
 
-    <header>
+    <!-- <header>
       <h1>Abonnement à la newsletter!</h1>
     </header>
     <p style="text-align: justify; padding: 10px">
       Veuillez remplir tous les champs suivants :
-    </p>
-    <form id="subscribeForm">
+    </p> -->
+    <!-- <form id="subscribeForm">
       <p id="messageParagraph"></p>
       <label for="names">Nom* :</label>
       <input type="text" id="names" name="names" required />
 
       <label for="email">Email*</label>
-      <input type="email" id="emails" name="email" required />
-      <!-- <label for="video">Programmes TV/Video</label> -->
-      <!-- <select id="video" name="video">
+      <input type="email" id="emails" name="email" required /> -->
+    <!-- <label for="video">Programmes TV/Video</label> -->
+    <!-- <select id="video" name="video">
         <option value="" disabled selected>Choisissez un programme Tv</option>
         <option value="ortb">Ortb</option>
         <option value="youtube">youtube(Brigade de prière)</option>
         <option value="facebook">Facebook(Brigade de prière)</option>
       </select> -->
 
-      <!-- <label for="audio">Programmes AUDIO</label> -->
-      <!-- <select id="audio" name="audio">
+    <!-- <label for="audio">Programmes AUDIO</label> -->
+    <!-- <select id="audio" name="audio">
         <option value="" disabled selected>
           Choisissez un programme Radio
         </option>
@@ -434,9 +435,9 @@
         <option value="tokpa">podcast</option>
       </select> -->
 
-      <button id="submitButton" type="submit">Soumettre</button>
+    <!-- <button id="submitButton" type="submit">Soumettre</button>
     </form>
-    <p id="text"></p>
+    <p id="text"></p> -->
 
     <!-- Footer Start -->
     <div
