--- a/ministere.html
+++ b/ministere.html
@@ -588,13 +588,13 @@ padding: 15px;
 
 
   
-    <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</2>
+    <!-- <h2 style="text-align: center;">Exprimez votre gratitude et plantez la graine de l'abondance en un simple clic.</2>
   
   
     <div class="child14"></div>
     <p style="padding: 15px;">Pour envoyer votre action de grâce avec MTN en un clic, cliquer sur le bouton MTN, saisissez le montant suivi de #. Pour MOOV, saisissez le montant suivi, composez *1 suivi de # en cliquant sur le bouton MOOV. </p>
     <p style="padding: 15px;">  <button class="mui-button secondary-button"><a style="color: #fff;" href="tel:*880*41*100000*">MTN</a></button>
-      <button class="mui-button primary"><a  style="color: #fff;" href="tel:*855*4*1*86260*">MOOV</a></button></p>
+      <button class="mui-button primary"><a  style="color: #fff;" href="tel:*855*4*1*86260*">MOOV</a></button></p> -->
 
     <br>
 
