--- a/about.html
+++ b/about.html
@@ -285,13 +285,18 @@
             Ce que nous croyons
           </div>
           <h1 class="display-6 mb-5">
-            Découvrez davantage sur nos activités et engagez-vous avec nous.
+            Découvrez davantage sur nos activités.
           </h1>
         </div>
      
         </div>
       </div>
     </div>
+    <p style="padding: 10px;">
+      La fondation "La Grâce Parle" a été créée le 00/0000, sous la direction de l'homme de Dieu Samuel Dalum, fondateur de cette organisation. Notre engagement profond envers un monde meilleur et plus équitable se traduit par notre dévouement à soutenir activement les personnes vulnérables, à offrir une éducation de qualité ainsi que des opportunités de formation professionnelle aux jeunes. Nous nous engageons également à préserver l'environnement et les ressources naturelles, à promouvoir la richesse de la culture béninoise, et à défendre sans relâche les droits de l'homme. Dans cette démarche,notre objectif est de générer un impact positif durable, de renforcer les communautés, et de contribuer au bien-être collectif.
+
+    </p>
+    <button style="background-color: #ffc400;margin: 10px;display: block;" class="mui-button success"><a style="color: #fff;"  href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
     <div class="mainOne">  <main>
 
       <section id="vision">
@@ -299,8 +304,18 @@
         <p style="text-align: justify;"> Créer un monde où les personnes vulnérables sont soutenues et automatisées, où la jeunesse accède à une éducation de qualité et à des opportunités de formation professionnelle, où l'environnement et les ressources naturelles sont préservés pour les générations futures, où la culture béninoise est célébrée et promue, et où les droits de l'homme sont défendus et respectés.</p>
       </section>
       <section id="mission">
-        <h2>Mission<img width="40" src="./img/mission.webp" alt="" ></h2>
+        <h2>Mission<img width="40" src="./img/objectiv.png" alt="" ></h2>
         <p style="text-align: justify;"> Notre mission est d'assister activement les personnes vulnérables en offrant un soutien et des ressources essentiels, de faciliter l'accès à une éducation de base de qualité et à des programmes de formation professionnelle pour les jeunes, de participer activement à la conservation et à la préservation de l'environnement et des ressources naturelles, de promouvoir et de valoriser la culture béninoise à travers diverses initiatives, et de défendre inlassablement les droits de l'homme en sensibilisant et en plaidant pour leur respect.</p>
+      </section>
+      <section id="mission">
+        <h2>Mission<img width="40" src="./img/mission.webp" alt="" ></h2>
+        <p style="text-align: justify;"><ul style="margin: 0;list-style: none;">
+          <li style="">Assister les prsonnes vulnérables</li>
+          <li>Contribuer a l'éducation de base et àla formation professionnelle des jeunes</li>
+          <li>Participer à la conservation et à la préservation de l'environnement et des ressources naturelles</li>
+          <li>Promouvoir et valoriser la culture béninoise</li>
+          <li>Défendre et vulgariser les droits de l'homme</li>
+        </ul></p>
       </section>
     </main></div>
     <br>
@@ -334,7 +349,7 @@ Objectifs
     </div> -->
     <p style="text-align: center;">
 
-      <button  class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
+     
           <!-- Donate Start -->
 
 <!-- Donate End -->
