--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@
           height: 300px;
         }
       }
+      .ma-division {
+        width: auto;
+        padding: 20px;
+        background-color: #f0f0f0;
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+        margin: 20px;
+      }
     </style>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -468,8 +475,7 @@
                 <div class="row justify-content-center">
                   <div class="col-lg-7 pt-5">
                     <h3 class="display-4 text-white mb-3 animated slideInDown">
-                      Illuminant les âmes égarées, Diffusant l'amour de
-                      Jésus-Christ.
+                      L'évangile au service du développement durable
                     </h3>
                     <!-- <a class="custom-button" href="ministere.html">DÉCOUVRIR</a> -->
                     <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
@@ -533,12 +539,12 @@
       <div class="box tall-box">
         <div class="flex-container">
           <button class="mui-button primary">
-            <span>&#9654;</span
-            ><a
-              style="padding-left: 10px"
+            <a
+              style="padding-left: 10px; font-size: 12px"
               target="_blank"
               href="https://www.youtube.com/@lagraceparle8000"
-              >VIDÉO</a
+            >
+              &#9654; VIDÉO</a
             >
           </button>
         </div>
@@ -552,9 +558,10 @@
       <div class="box large-box">
         <div class="flex-container">
           <button class="mui-button secondary">
-            <span style="color: #fff">&#9994;</span
-            ><a style="padding-left: 10px" href="humanitaire.html"
-              >HAND OF HOPE</a
+            <a
+              style="padding-left: 10px; font-size: 12px"
+              href="humanitaire.html"
+              >&#9994; HAND OF HOPE</a
             >
           </button>
         </div>
@@ -571,8 +578,10 @@
         <div class="flex-container">
           <button class="mui-button success" style="color: #ccc">
             <span>&#128161;</span
-            ><a style="padding-left: 10px" href="newsletter.html"
-              >The Monthly mediation</a
+            ><a
+              style="padding-left: 10px; font-size: 12px"
+              href="newsletter.html"
+              >THE MONTHLY MEDIATION</a
             >
           </button>
         </div>
@@ -585,7 +594,7 @@
       </div>
       <div class="box tall-box important">
         <div class="flex-container">
-          <button class="mui-button danger">
+          <button style="font-size: 12px" class="mui-button danger">
             <span>&#128218;</span> E-BOOK
           </button>
         </div>
@@ -612,11 +621,32 @@
     <h2 style="text-align: center">
       Apprenez-en plus sur ce que nous faisons et impliquez-vous
     </h2>
+    <div class="ma-division">
+      <h3>Qui-sommes-nous ?</h3>
 
+      <p>
+        Notre équipe est composée de personnes engagées, provenant de divers
+        horizons et apportant des compétences variées pour atteindre nos
+        objectifs communs. En travaillant ensemble, nous avons la conviction que
+        nous pouvons apporter un impact positif et durable.
+      </p>
+      <p>
+        Nous sommes une équipe passionnée et dévouée qui œuvre inlassablement
+        pour apporter des changements significatifs dans notre communauté et
+        au-delà. Notre organisation a été fondée avec une vision claire : créer
+        un monde meilleur pour tous. Nous croyons en l'importance de la
+        solidarité, de l'éducation, de la préservation de l'environnement, de la
+        promotion de la culture locale et du respect des droits de l'homme.
+      </p>
+
+      <button class="mui-button success" style="color: #ccc">
+        <a href="temoignage.html">En savoir plus</a>
+      </button>
+    </div>
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
       <h2 style="text-align: center">
-        ILS TÉMOIGNENT TOUS DE LA GRÂCE DE DIEU
+        Ils témoignent tous de la grâce de Dieu
       </h2>
       <p style="padding: 15px">
         Explorer les témoignages inspirants de femmes et d'hommes de grâce qui
