--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="La grâce parle,brigarde de prière,femme de grâce,le jeûne des jeunes,le cocktail des jeunes,worship mood,chambre haute,philharmonie la grâce parle,les témoins de la grâce"
       name="keywords"
     />
-    <meta content="" name="description" />
+    <meta content="Guidés par la foi et l'amour, La fonadtion La Grâce Parle apporte de l'espoir et de l'aide aux communautés. Rejoignez notre mission de foi, d'amour et de service pour un monde meilleur." name="description" />
 
     <!-- Favicon -->
     <link href="img/logo.jfif" rel="icon" />
@@ -39,8 +39,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/modal.css" rel="stylesheet" />
-    <link href="css/style.css" rel="stylesheet" />
     <link href="css/humanitaire.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <!-- Script pour les transactions en ligne -->
     <script src="https://cdn.fedapay.com/checkout.js?v=1.1.7"></script>
     <!-- Google tag (gtag.js) -->
@@ -625,16 +625,17 @@
       <h3>Qui-sommes-nous ?</h3>
 
       <p>
-        Notre équipe est composée de personnes engagées, provenant de divers
-        horizons et apportant des compétences variées pour atteindre nos
-        objectifs communs. En travaillant ensemble, nous avons la conviction que
-        nous pouvons apporter un impact positif et durable.
+            Fondé par le prophète Samuel Dalum, La Fondation "La Grâce Parle"
+        est une organisation à but non lucratif dont le siège est au Bénin,
+        dédiée à apporter de l'aide, de l'espoir et de l'amour aux différentes
+        communautés. Fondé sur des valeurs chrétiennes profondes, notre
+        engagement est de répondre aux besoins physiques, émotionnels et
+        spirituels des hommes, en suivant l'enseignement de Jésus-Christ sur
+        l'amour et la solidarité. 
       </p>
       <p>
         Nous sommes une équipe passionnée et dévouée qui œuvre inlassablement
-        pour apporter des changements significatifs dans notre communauté et
-        au-delà. Notre organisation a été fondée avec une vision claire : créer
-        un monde meilleur pour tous. Nous croyons en l'importance de la
+        pour un monde meilleur pour tous. Nous croyons en l'importance de la
         solidarité, de l'éducation, de la préservation de l'environnement, de la
         promotion de la culture locale et du respect des droits de l'homme.
       </p>
@@ -643,6 +644,63 @@
         <a href="temoignage.html">En savoir plus</a>
       </button>
     </div>
+    <h2 style="text-align: center">
+      Expérimenter une nouvelle dimension avec Dieu avec nos programmes.
+    </h2>
+    <br />
+
+    <div
+      style="
+        background-image: url(img/brigade/brigade3.jpg);
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+        width: 100%;
+        height: 300px;
+      "
+    ></div>
+    <p style="padding: 15px"></p>
+    <p style="padding: 15px">
+      Ce programme hebdomadaire est centré sur le jeûne et la prière. Les jeunes
+      s'unissent dans un acte de renoncement, abandonnant temporairement les
+      distractions de la vie quotidienne pour se concentrer sur la recherche de
+      la présence de Dieu. À travers la prière, la méditation et la réflexion
+      personnelle, ils aspirent à une compréhension plus profonde de leur foi et
+      de leur chemin spirituel.
+      <button class="mui-button success" style="color: #ccc">
+        <a href="temoignage.html">En savoir plus</a>
+      </button>
+    </p>
+    <h2 style="text-align: center">L'orchestre philharmonie La Grâce Parle</h2>
+    <div
+      style="
+        background-image: url(img/phil2.jpg);
+        background-position: center;
+        background-attachment: fixed;
+        background-size: cover;
+        width: 100%;
+      "
+    >
+      <p style="padding: 15px">
+        Chaque samedi à partir de 9h, au Centre la Grâce Parle, les jeunes se
+        rassemblent pour une expérience spirituelle profonde et transformante.
+        C'est une opportunité pour les jeunes de chercher la face de Dieu dans
+        leur vie, de se rapprocher de leur foi et de cultiver une connexion
+        spirituelle puissante.
+      </p>
+      <p style="padding: 15px">
+        Ce programme hebdomadaire est centré sur le jeûne et la prière. Les
+        jeunes s'unissent dans un acte de renoncement, abandonnant
+        temporairement les distractions de la vie quotidienne pour se concentrer
+        sur la recherche de la présence de Dieu. À travers la prière, la
+        méditation et la réflexion personnelle, ils aspirent à une compréhension
+        plus profonde de leur foi et de leur chemin spirituel.
+        <button class="mui-button success" style="color: #ccc">
+          <a href="temoignage.html">En savoir plus</a>
+        </button>
+      </p>
+    </div>
+
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
       <h2 style="text-align: center">
@@ -799,6 +857,7 @@
         </button>
       </div>
     </div>
+
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 fadeIn"
