--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       content="La grâce parle,brigarde de prière,femme de grâce,le jeûne des jeunes,le cocktail des jeunes,worship mood,chambre haute,philharmonie la grâce parle,les témoins de la grâce"
       name="keywords"
     />
-    <meta content="Guidés par la foi et l'amour, La fonadtion La Grâce Parle apporte de l'espoir et de l'aide aux communautés. Rejoignez notre mission de foi, d'amour et de service pour un monde meilleur." name="description" />
+    <meta
+      content="Guidés par la foi et l'amour, La fonadtion La Grâce Parle apporte de l'espoir et de l'aide aux communautés. Rejoignez notre mission de foi, d'amour et de service pour un monde meilleur."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="img/logo.jfif" rel="icon" />
@@ -621,7 +624,7 @@
     <h2 style="text-align: center">
       Apprenez-en plus sur ce que nous faisons et impliquez-vous
     </h2>
-    <div class="ma-division">
+    <div class="">
       <h3>Qui-sommes-nous ?</h3>
 
       <p>
@@ -645,7 +648,8 @@
       </button>
     </div>
     <h2 style="text-align: center">
-      Expérimenter une nouvelle dimension avec Dieu avec nos programmes.
+      Expérimenter une nouvelle dimension avec Dieu avec nos programmes de
+      prière.
     </h2>
     <br />
 
@@ -659,48 +663,38 @@
         height: 300px;
       "
     ></div>
-    <p style="padding: 15px"></p>
+
     <p style="padding: 15px">
-      Ce programme hebdomadaire est centré sur le jeûne et la prière. Les jeunes
-      s'unissent dans un acte de renoncement, abandonnant temporairement les
-      distractions de la vie quotidienne pour se concentrer sur la recherche de
-      la présence de Dieu. À travers la prière, la méditation et la réflexion
-      personnelle, ils aspirent à une compréhension plus profonde de leur foi et
-      de leur chemin spirituel.
+      Nos programmes de prière offrent une opportunité précieuse de se connecter
+      avec Dieu, de se recentrer et de trouver la paix intérieure. À travers des
+      moments de louange, de supplication et d'adoration, ces programmes créent
+      un espace pour renforcer sa relation avec Dieu. Que ce soit des réunions
+      de prière en groupe, les programmes de prière permettent de se ressourcer
+      spirituellement, de chercher des réponses aux questions les plus profondes
+      de la vie, et de trouver un apaisement dans un monde parfois agité. Ils
+      sont une source d'inspiration, d'encouragement et d'élévation pour l'âme,
+      offrant un moment de communion intime avec le divin.
       <button class="mui-button success" style="color: #ccc">
-        <a href="temoignage.html">En savoir plus</a>
+        <a href="ministere.html">En savoir plus</a>
       </button>
     </p>
     <h2 style="text-align: center">L'orchestre philharmonie La Grâce Parle</h2>
-    <div
-      style="
-        background-image: url(img/phil2.jpg);
-        background-position: center;
-        background-attachment: fixed;
-        background-size: cover;
-        width: 100%;
-      "
-    >
-      <p style="padding: 15px">
-        Chaque samedi à partir de 9h, au Centre la Grâce Parle, les jeunes se
-        rassemblent pour une expérience spirituelle profonde et transformante.
-        C'est une opportunité pour les jeunes de chercher la face de Dieu dans
-        leur vie, de se rapprocher de leur foi et de cultiver une connexion
-        spirituelle puissante.
-      </p>
-      <p style="padding: 15px">
-        Ce programme hebdomadaire est centré sur le jeûne et la prière. Les
-        jeunes s'unissent dans un acte de renoncement, abandonnant
-        temporairement les distractions de la vie quotidienne pour se concentrer
-        sur la recherche de la présence de Dieu. À travers la prière, la
-        méditation et la réflexion personnelle, ils aspirent à une compréhension
-        plus profonde de leur foi et de leur chemin spirituel.
-        <button class="mui-button success" style="color: #ccc">
-          <a href="temoignage.html">En savoir plus</a>
-        </button>
-      </p>
-    </div>
-
+    <p style="padding: 15px">
+      L'orchestre philharmonique est l'une des formations musicales les plus
+      prestigieuses et emblématiques au monde. Composé de musiciens talentueux
+      jouant une variété d'instruments à cordes, à vent et à percussions, cet
+      ensemble symphonique crée une harmonie enchanteresse. Sous la baguette
+      d'un chef d'orchestre expérimenté, la philharmonie donne vie à des
+      compositions classiques et contemporaines, transportant son public dans un
+      voyage musical captivant. Les mélodies majestueuses et les sonorités
+      époustouflantes de l'orchestre philharmonique sont une célébration de la
+      musique dans toute sa splendeur, incarnant l'élégance, la passion et la
+      virtuosité. C'est un véritable trésor culturel qui continue à inspirer et
+      à émouvoir les auditoires du monde entier.
+      <button class="mui-button success" style="color: #ccc">
+        <a href="temoignage.html">Les témoins de la grâce</a>
+      </button>
+    </p>
     <!-- Testimonial Start -->
     <div class="container-xxl py-5">
       <h2 style="text-align: center">
