--- a/index.html
+++ b/index.html
@@ -621,22 +621,18 @@
   >
     Ce que nous faisons
   </div> -->
-    <h2 style="text-align: center">
-      Apprenez-en plus sur ce que nous faisons et impliquez-vous
-    </h2>
+    <h2 style="text-align: center">Qui-sommes-nous ?</h2>
     <div class="">
-      <h3>Qui-sommes-nous ?</h3>
-
-      <p>
-            Fondé par le prophète Samuel Dalum, La Fondation "La Grâce Parle"
-        est une organisation à but non lucratif dont le siège est au Bénin,
-        dédiée à apporter de l'aide, de l'espoir et de l'amour aux différentes
+      <p style="padding: 15px">
+        Fondé par le prophète Samuel Dalum, La Fondation "La Grâce Parle" est
+        une organisation à but non lucratif dont le siège est au Bénin, dédiée à
+        apporter de l'aide, de l'espoir et de l'amour aux différentes
         communautés. Fondé sur des valeurs chrétiennes profondes, notre
         engagement est de répondre aux besoins physiques, émotionnels et
         spirituels des hommes, en suivant l'enseignement de Jésus-Christ sur
         l'amour et la solidarité. 
       </p>
-      <p>
+      <p style="padding: 15px">
         Nous sommes une équipe passionnée et dévouée qui œuvre inlassablement
         pour un monde meilleur pour tous. Nous croyons en l'importance de la
         solidarité, de l'éducation, de la préservation de l'environnement, de la
@@ -647,7 +643,7 @@
         <a href="temoignage.html">En savoir plus</a>
       </button>
     </div>
-    <h2 style="text-align: center">
+    <h2 style="text-align: center; margin-top: 20px">
       Expérimenter une nouvelle dimension avec Dieu avec nos programmes de
       prière.
     </h2>
