--- a/about.html
+++ b/about.html
@@ -293,7 +293,13 @@
       </div>
     </div>
     <p style="padding: 10px;">
-      La fondation "La Grâce Parle" a été créée le 00/0000, sous la direction de l'homme de Dieu Samuel Dalum, fondateur de cette organisation. Notre engagement profond envers un monde meilleur et plus équitable se traduit par notre dévouement à soutenir activement les personnes vulnérables, à offrir une éducation de qualité ainsi que des opportunités de formation professionnelle aux jeunes. Nous nous engageons également à préserver l'environnement et les ressources naturelles, à promouvoir la richesse de la culture béninoise, et à défendre sans relâche les droits de l'homme. Dans cette démarche,notre objectif est de générer un impact positif durable, de renforcer les communautés, et de contribuer au bien-être collectif.
+      Fondé par le prophète Samuel Dalum, La Fondation "La Grâce Parle" est
+      une organisation à but non lucratif dont le siège est au Bénin, dédiée à
+      apporter de l'aide, de l'espoir et de l'amour aux différentes
+      communautés. Fondé sur des valeurs chrétiennes profondes, notre
+      engagement est de répondre aux besoins physiques, émotionnels et
+      spirituels des hommes, en suivant l'enseignement de Jésus-Christ sur
+      l'amour et la solidarité. 
 
     </p>
     <button style="background-color: #ffc400;margin: 10px;display: block;" class="mui-button success"><a style="color: #fff;"  href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
