--- a/index.html
+++ b/index.html
@@ -664,20 +664,19 @@
       Nos programmes de prière offrent une opportunité précieuse de se connecter
       avec Dieu, de se recentrer et de trouver la paix intérieure. À travers des
       moments de louange, de supplication et d'adoration, ces programmes créent
-      un espace pour renforcer sa relation avec Dieu. Que ce soit des réunions
-      de prière en groupe, les programmes de prière permettent de se ressourcer
+      un espace pour renforcer sa relation avec Dieu. Les programmes de prière permettent de se ressourcer
       spirituellement, de chercher des réponses aux questions les plus profondes
       de la vie, et de trouver un apaisement dans un monde parfois agité. Ils
       sont une source d'inspiration, d'encouragement et d'élévation pour l'âme,
-      offrant un moment de communion intime avec le divin.
+      offrant un moment de communion intime avec notreseigneur Jesus.
       <button class="mui-button success" style="color: #ccc">
         <a href="ministere.html">En savoir plus</a>
       </button>
     </p>
-    <h2 style="text-align: center">L'orchestre philharmonie La Grâce Parle</h2>
+    <h2 style="text-align: center">Découvrez notre branche musicale : L'orchestre philharmonie La Grâce Parle</h2>
     <p style="padding: 15px">
       L'orchestre philharmonique est l'une des formations musicales les plus
-      prestigieuses et emblématiques au monde. Composé de musiciens talentueux
+      prestigieuses et emblématiques de lasous région. Composé de jeunes talentueux
       jouant une variété d'instruments à cordes, à vent et à percussions, cet
       ensemble symphonique crée une harmonie enchanteresse. Sous la baguette
       d'un chef d'orchestre expérimenté, la philharmonie donne vie à des
@@ -688,7 +687,7 @@
       virtuosité. C'est un véritable trésor culturel qui continue à inspirer et
       à émouvoir les auditoires du monde entier.
       <button class="mui-button success" style="color: #ccc">
-        <a href="temoignage.html">Les témoins de la grâce</a>
+        <a href="philharmonie.html">En savoir plus
       </button>
     </p>
     <!-- Testimonial Start -->
